--- a/client/templates/client/dashboard.html
+++ b/client/templates/client/dashboard.html
@@ -73,38 +73,64 @@
         <!-- Main row -->
         <div class="row">
           <!-- Left col -->
-          <section class="col-lg-7 connectedSortable">
-            <!-- Custom tabs (Charts with tabs)-->
-            <div class="card">
+
+
+            <!--Bar Chart-->
+
+            <section class="col-lg-7 connectedSortable">
+
+              <div class="card card-success">
               <div class="card-header">
-                <h3 class="card-title">
-                  <i class="fas fa-chart-pie mr-1"></i>
-                  Sales
-                </h3>
+                <h3 class="card-title">Bar Chart</h3>
+
                 <div class="card-tools">
-                  <ul class="nav nav-pills ml-auto">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#revenue-chart" data-toggle="tab">Area</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#sales-chart" data-toggle="tab">Donut</a>
-                    </li>
-                  </ul>
+                  <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <button type="button" class="btn btn-tool" data-card-widget="remove">
+                    <i class="fas fa-times"></i>
+                  </button>
                 </div>
-              </div><!-- /.card-header -->
+              </div>
               <div class="card-body">
-                <div class="tab-content p-0">
-                  <!-- Morris chart - Sales -->
-                  <div class="chart tab-pane active" id="revenue-chart"
-                       style="position: relative; height: 300px;">
-                      <canvas id="revenue-chart-canvas" height="300" style="height: 300px;"></canvas>
-                   </div>
-                  <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">
-                    <canvas id="sales-chart-canvas" height="300" style="height: 300px;"></canvas>
-                  </div>
+                <div class="chart"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                  <canvas id="barChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%; display: block; width: 341px;" width="511" height="375" class="chartjs-render-monitor"></canvas>
                 </div>
-              </div><!-- /.card-body -->
+              </div>
+              <!-- /.card-body -->
             </div>
+
+              <!-- Custom tabs (Charts with tabs)-->
+{#            <div class="card">#}
+{#              <div class="card-header">#}
+{#                <h3 class="card-title">#}
+{#                  <i class="fas fa-chart-pie mr-1"></i>#}
+{#                  Sales#}
+{#                </h3>#}
+{#                <div class="card-tools">#}
+{#                  <ul class="nav nav-pills ml-auto">#}
+{#                    <li class="nav-item">#}
+{#                      <a class="nav-link active" href="#revenue-chart" data-toggle="tab">Area</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                      <a class="nav-link" href="#sales-chart" data-toggle="tab">Donut</a>#}
+{#                    </li>#}
+{#                  </ul>#}
+{#                </div>#}
+{#              </div><!-- /.card-header -->#}
+{#              <div class="card-body">#}
+{#                <div class="tab-content p-0">#}
+{#                  <!-- Morris chart - Sales -->#}
+{#                  <div class="chart tab-pane active" id="revenue-chart"#}
+{#                       style="position: relative; height: 300px;">#}
+{#                      <canvas id="revenue-chart-canvas" height="300" style="height: 300px;"></canvas>#}
+{#                   </div>#}
+{#                  <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">#}
+{#                    <canvas id="sales-chart-canvas" height="300" style="height: 300px;"></canvas>#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div><!-- /.card-body -->#}
+{#            </div>#}
             <!-- /.card -->
 
             <!-- DIRECT CHAT -->
@@ -586,4 +612,6 @@
       </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
+
+
 {% endblock %}
