--- a/creditors_master/templates/creditors_master/creditors_detail.html
+++ b/creditors_master/templates/creditors_master/creditors_detail.html
@@ -1,6 +1,8 @@
 {{% extends "client/layout.html" %}
 {% block body %}
 
+    <h1 align="center">Creditors Details</h1>
+    <hr/>
     <div class="row">
 
         <div class="col-md-5">
@@ -14,10 +16,6 @@
 
                     <li class="list-group-item">
                         <b> Creation Date:</b> <a class="float-right">{{ object.creation_date }}</a>
-                    </li>
-
-                    <li class="list-group-item">
-                        <b>Employee Id:</b> <a class="float-right">{{ object.employee_id }}</a>
                     </li>
 
                     <li class="list-group-item">
