--- a/expense_detail/templates/expense_detail/expense_confirm_delete.html
+++ b/expense_detail/templates/expense_detail/expense_confirm_delete.html
@@ -97,7 +97,7 @@
 
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
-            <a href="{% url 'suppliers_master-view' %}" class="btn btn-info">Cancel </a>
+            <a href="{% url 'expense_detail-view' %}" class="btn btn-info">Cancel </a>
         </div>
 
     </form>
