--- a/tank_master/templates/tank_master/tank_detail.html
+++ b/tank_master/templates/tank_master/tank_detail.html
@@ -72,7 +72,7 @@
     </div>
 
             <div align="center">
-                 <a href="{% url 'rate-view' %}" class="btn btn-info"><b>Back</b></a>
+                 <a href="{% url 'tank-view' %}" class="btn btn-info"><b>Back</b></a>
             </div>
 
 
