--- a/calculation_master/templates/calculation_master/calculation_list.html
+++ b/calculation_master/templates/calculation_master/calculation_list.html
@@ -23,8 +23,8 @@
                   <thead>
                   <tr>
                       <th>Date</th>
-                      <th>Opening Of Tank</th>
-                      <th>Closing Of Tank</th>
+                      <th>Total Price Of Petrol</th>
+                      <th>Total Price Of Diesel</th>
                       <th>Action</th>
                   </tr>
                   </thead>
@@ -32,8 +32,8 @@
                         {% for calculation in calculation_master %}
                         <tr>
                             <td data-sort="{{ calculation.date|date:"Ymd" }}">{{ calculation.date | date:"d-m-Y" }}</td>
-                            <td>{{ calculation.tank_opening }}</td>
-                            <td>{{ calculation.tank_closing }}</td>
+                            <td>{{ calculation.total_price_petrol }}</td>
+                            <td>{{ calculation.total_price_diesel }}</td>
                             <td>
                                 <a href="{% url 'calculation-update'  calculation.id %}" class="btn btn-info">
                                    <li class="fas fa-pencil-alt"></li> Edit
@@ -52,8 +52,8 @@
                   <tfoot>
                   <tr>
                       <th align="center">Date</th>
-                      <th align="center">Opening Of Tank</th>
-                      <th align="center">Closing Of Tank</th>
+                      <th align="center">Total Price Of Petrol</th>
+                      <th align="center">Total Price Of Diesel</th>
                       <th align="center">Action</th>
                   </tr>
                   </tfoot>
@@ -104,7 +104,7 @@
             },
               {
                     extend: 'print',
-                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img></div>",
+                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img><br><br/> Sanghvi Petrol Petrolium-Jarod Samlaya Road Mobile No:-9924571590 <br><br/></div>",
                     exportOptions:{
                         columns:':visible'
                     }
