--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
@@ -22,7 +22,7 @@
                     </li>
 
                     <li class="list-group-item">
-                    <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master.vehicle_no }}</a>
+                    <b> Vehicle Number: </b> <a class="float-right">{{ object.vehicle_master.vehicle_no }}</a>
                     </li>
 
                     <li class="list-group-item">
