--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_list.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_list.html
@@ -15,7 +15,7 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title" align="center"> Creditors Transaction Table </h3>
+                <h3  align="center"> Creditors Transaction Table </h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
@@ -104,7 +104,7 @@
             },
               {
                     extend: 'print',
-                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img></div>",
+                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img><br><br/> Sanghvi Petrol Petrolium-Jarod Samlaya Road Mobile No:-9924571590 <br><br/></div>",
                     exportOptions:{
                         columns:':visible'
                     }
