--- a/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_confirm_delete.html
+++ b/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_confirm_delete.html
@@ -45,7 +45,7 @@
     </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
-            <a href="{% url 'suppliers_master-view' %}" class="btn btn-info">Cancel </a>
+            <a href="{% url 'e_dailybase_amount-view' %}" class="btn btn-info">Cancel </a>
         </div>
 
     </form>
