--- a/employee_master/templates/employee_master/employee_list.html
+++ b/employee_master/templates/employee_master/employee_list.html
@@ -161,7 +161,7 @@
             },
               {
                     extend: 'print',
-                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img></div>",
+                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img><br><br/> Sanghvi Petrol Petrolium-Jarod Samlaya Road Mobile No:-9924571590 <br><br/></div>",
                     exportOptions:{
                         columns:':visible'
                     }
