--- a/employee_payment/templates/employee_payment/employee_p_confirm_delete.html
+++ b/employee_payment/templates/employee_payment/employee_p_confirm_delete.html
@@ -83,7 +83,7 @@
     </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
-            <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
+            <a href="{% url 'employee_payment-view' %}" class="btn btn-info">Cancel </a>
         </div>
 
     </form>
