--- a/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
@@ -43,7 +43,7 @@
 
         <div align="center">
             <input type="submit" value="delete" class="btn btn-danger">
-            <a href="{% url 'rate-view' %}" class="btn btn-info" >cancel </a>
+            <a href="{% url 'nozzlle-view' %}" class="btn btn-info" >cancel </a>
         </div>
 
     </form>
