--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_confirm_delete.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_confirm_delete.html
@@ -138,7 +138,7 @@
     </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
-            <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
+            <a href="{% url 'nozzlle_transaction-view' %}" class="btn btn-info">Cancel </a>
         </div>
 
     </form>
