--- a/tank_master/templates/tank_master/tank_list.html
+++ b/tank_master/templates/tank_master/tank_list.html
@@ -82,7 +82,6 @@
 
 {% endblock %}
 
-
 {% block extra_js %}
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
@@ -122,7 +121,7 @@
             },
               {
                     extend: 'print',
-                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img></div>",
+                    messageTop: "<div class='col-sm-3'></div><div class='col-sm-3'><img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img><br><br/> Sanghvi Petrol Petrolium-Jarod Samlaya Road Mobile No:-9924571590 <br><br/></div>",
                     exportOptions:{
                         columns:':visible'
                     }
