--- a/vehicle_master/templates/vehicle_master/vehicle_confirm_delete.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_confirm_delete.html
@@ -55,7 +55,7 @@
 
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
-            <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
+            <a href="{% url 'vehicle-view' %}" class="btn btn-info">Cancel </a>
         </div>
 
     </form>
