--- a/creditors_master/templates/creditors_master/creditors_detail.html
+++ b/creditors_master/templates/creditors_master/creditors_detail.html
@@ -1,15 +1,21 @@
 {% extends "client/layout.html" %}
 {% block body %}
 
-    <h1 align="center">Creditors Details</h1>
-    <hr/>
+
+    <h3 class="profile-username text-center"> Creditors Transaction Details </h3>
+<hr/>
+
+    <div align="center">
+
     <div class="row">
 
-        <div class="col-md-5">
+        <div class="col-md-6" align="left">
+
             <div class="card card-primary card-outline" class="col-md-4">
               <div class="card-body box-profile">
 
                 <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                         <b> Creditor Name:</b> <a class="float-right">{{ object.first_name }} {{ object.middle_name }} {{ object.last_name }}</a>
                     </li>
@@ -39,15 +45,16 @@
               </div>
 
             </div>
-        </div>
 
-        <div class="col-md-5">
+    </div>
+
+        <div class="col-md-6" align="left">
 
             <div class="card card-primary card-outline" class="col-md-4">
-
               <div class="card-body box-profile">
 
                 <ul class="list-group list-group-unbordered mb-3">
+
                         <li class="list-group-item">
                             <b>Company Name:</b> <a class="float-right">{{ object.company_name }}</a>
                         </li>
@@ -85,18 +92,119 @@
               </div>
 
             </div>
-        </div>
 
     </div>
 
-    <div class="row no-print">
-                <div class="col-12" align="left">
-                  <a href="{% url 'print' object.id %}" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
-                    <a href="{% url 'creditors-view' %}" >
-                      <button type="button" class="btn btn-info float-right"> Back </button>
-                    </a>
+    </div>
 
-                </div>
-              </div>
+{##}
+{#        <div class="row no-print">#}
+{#                <div class="col-12">#}
+{#                    <a href="{% url 'print-page' object.id %}" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>#}
+{#                    <a href="{% url 'creditor_transaction-view' %}" class="btn btn-info"><b>Back</b></a>#}
+{##}
+{#                </div>#}
+{##}
+{#        </div>#}
+
+    </div>
+
+{#    <h1 align="center">Creditors Details</h1>#}
+{#    <hr/>#}
+{#    <div class="row" col-lg-12 col-lg-12>#}
+{##}
+{#        <div class="col-md-5">#}
+{#            <div class="card card-primary card-outline" class="col-md-4">#}
+{#              <div class="card-body box-profile">#}
+{##}
+{#                <ul class="list-group list-group-unbordered mb-3">#}
+{#                    <li class="list-group-item">#}
+{#                        <b> Creditor Name:</b> <a class="float-right">{{ object.first_name }} {{ object.middle_name }} {{ object.last_name }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                        <b> Creation Date:</b> <a class="float-right">{{ object.creation_date }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                        <b>Mobile Number:</b> <a class="float-right">{{ object.mobile_no }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                        <b>Office Number:</b> <a class="float-right">{{ object.office_no }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                        <b>Contact Person's Name:</b> <a class="float-right">{{ object.contact_person_name }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                        <b>Contact Person's Mobile Number:</b> <a class="float-right">{{ object.contact_person_mobile_no }}</a>#}
+{#                    </li>#}
+{##}
+{#                </ul>#}
+{##}
+{#              </div>#}
+{##}
+{#            </div>#}
+{#        </div>#}
+{##}
+{#        <div class="col-md-5">#}
+{##}
+{#            <div class="card card-primary card-outline" class="col-md-4">#}
+{##}
+{#              <div class="card-body box-profile">#}
+{##}
+{#                <ul class="list-group list-group-unbordered mb-3">#}
+{#                        <li class="list-group-item">#}
+{#                            <b>Company Name:</b> <a class="float-right">{{ object.company_name }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>Address:</b> <a class="float-right">{{ object.home_no }},{{ object.street_name }},{{ object.area_name }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>City:</b> <a class="float-right">{{ object.city }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>State:</b> <a class="float-right">{{ object.state }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>Country:</b> <a class="float-right">{{ object.country }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>Pincode:</b> <a class="float-right">{{ object.pincode }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>GST Number:</b> <a class="float-right">{{ object.gst_no }}</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                            <b>Pending Balance:</b> <a class="float-right">{{ object.pending_balance }}</a>#}
+{#                        </li>#}
+{##}
+{#                </ul>#}
+{##}
+{#              </div>#}
+{##}
+{#            </div>#}
+{#        </div>#}
+{##}
+{#    </div>#}
+{##}
+{#        <div class="row no-print">#}
+{#                <div class="col-12">#}
+{#                    <a href="{% url 'print-page' object.id %}" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>#}
+{#                    <a href="{% url 'creditor_transaction-view' %}" class="btn btn-info"><b>Back</b></a>#}
+{##}
+{#                </div>#}
+{##}
+{#        </div>#}
+{##}
 
 {% endblock %}
