--- a/creditors_transaction/templates/creditors_transaction/print.html
+++ b/creditors_transaction/templates/creditors_transaction/print.html
@@ -1,18 +1,27 @@
-{% extends "client/layout.html" %}
-{% block body %}
+{#{% extends "client/layout.html" %}#}
+{#{% block body %}#}
+{% load static %}
+<!-- Google Font: Source Sans Pro -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
+
+    <div class='col-sm-3'></div>
+    <div class='col-sm-3'>
+        <img src='{% static 'Indian_Oil_Logo.jpeg' %}' width='100' height='100'></img>
+        <br><br/>
+        Sanghvi Petrol Petrolium-Jarod Samlaya Road Mobile No:-9924571590
+        <br><br/>
+    </div>
 
     <h3 class="profile-username text-center"> Creditors Transaction Details </h3>
-<hr/>
+    <hr/>
 
-    <div align="center">
+    <ul class="list-group list-group-unbordered mb-3">
 
-        <div class="col-md-6" align="left">
-
-            <div class="card card-primary card-outline" class="col-md-4">
-              <div class="card-body box-profile">
-
-                <ul class="list-group list-group-unbordered mb-3">
-
+    <div>
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -55,23 +64,21 @@
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
-                </ul>
-
-              </div>
-
-            </div>
-
     </div>
 
-        <div class="row no-print">
-                <div class="col-12">
-                    <a href="{% url 'print-page' object.id %}" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
-                    <a href="{% url 'creditor_transaction-view' %}" class="btn btn-info"><b>Back</b></a>
+    </ul>
 
-                </div>
+{#{% endblock %}#}
 
-        </div>
+<!-- jQuery -->
+<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+<!-- Bootstrap 4 -->
+<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<!-- AdminLTE App -->
+<script src="{% static 'dist/js/adminlte.min.js' %}"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="{% static 'dist/js/demo.js' %}" ></script>
 
-    </div>
-
-{% endblock %}
+<script>
+    window.addEventListener("load", window.print());
+</script>
