Dashboard is updated!!!

--- a/calculation_master/templates/calculation_master/calculation_detail.html
+++ b/calculation_master/templates/calculation_master/calculation_detail.html
@@ -1,7 +1,7 @@
 {% extends "client/layout.html" %}
 {% block body %}
 
-    <h3 class="profile-username text-center"> Tank Details </h3>
+    <h1 class="profile-username text-center"> Calculation Details </h1>
 <hr/>
 
     <div align="center">
