--- a/client/templates/client/login.html
+++ b/client/templates/client/login.html
@@ -16,10 +16,10 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
 </head>
-<body class="hold-transition login-page">
+<body class="hold-transition login-page" style="background-color:#3ab0c3")>
 <div class="login-box">
-  <div class="login-logo">
-    <a href="../../index2.html"><b>Indian Oil</b> Petrol Pump</a>
+  <div class="login-logo" style="font-family: 'Bitstream Vera Sans Mono'">
+    <a href="../../index2.html"><b>Indian Oil Petrol Pump </b></a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
@@ -55,7 +55,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+              <button type="submit" class="btn btn-primary btn-block">Sign In</button>
           </div>
           <!-- /.col -->
         </div>
@@ -75,9 +75,9 @@
       <p class="mb-1">
         <a href="forgot-password.html">I forgot my password</a>
       </p>
-      <p class="mb-0">
-        <a href="register.html" class="text-center">Register a new membership</a>
-      </p>
+{#      <p class="mb-0">#}
+{#        <a href="register.html" class="text-center">Register a new membership</a>#}
+{#      </p>#}
     </div>
     <!-- /.login-card-body -->
   </div>
