--- a/creditors_master/templates/creditors_master/creditors_detail.html
+++ b/creditors_master/templates/creditors_master/creditors_detail.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 
-    <h3 class="profile-username text-center"> Creditors Transaction Details </h3>
+    <h1 class="profile-username text-center"> Creditors Details </h1>
 <hr/>
 
     <div align="center">
@@ -101,7 +101,7 @@
 {#        <div class="row no-print">#}
 {#                <div class="col-12">#}
 {#                    <a href="{% url 'print-page' object.id %}" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>#}
-{#                    <a href="{% url 'creditor_transaction-view' %}" class="btn btn-info"><b>Back</b></a>#}
+                    <a href="{% url 'creditors-view' %}" class="btn btn-info"><b>Back</b></a>
 {##}
 {#                </div>#}
 {##}
