--- a/expense_detail/templates/expense_detail/expense_list.html
+++ b/expense_detail/templates/expense_detail/expense_list.html
@@ -15,7 +15,7 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title" align="center"> Expenses Detail Table </h3>
+                <h3 align="center"> Expenses Detail Table </h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
