--- a/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
@@ -42,8 +42,8 @@
     </div>
 
         <div align="center">
-            <input type="submit" value="delete" class="btn btn-danger">
-            <a href="{% url 'nozzlle-view' %}" class="btn btn-info" >cancel </a>
+            <input type="submit" value="Delete" class="btn btn-danger">
+            <a href="{% url 'nozzlle-view' %}" class="btn btn-info" >Cancel </a>
         </div>
 
     </form>
