--- a/creditors_payment/templates/creditors_payment/payment_list.html
+++ b/creditors_payment/templates/creditors_payment/payment_list.html
@@ -15,7 +15,7 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title" align="center"> Creditors Payment Table </h3>
+                <h3 align="center"> Creditors Payment Table </h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
