--- a/suppliers_master/templates/suppliers_master/suppliers_list.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_list.html
@@ -15,7 +15,7 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title" align="center"> Suppliers Table </h3>
+                <h3 align="center"> Suppliers Table </h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
