--- a/tank_master/templates/tank_master/tank_confirm_delete.html
+++ b/tank_master/templates/tank_master/tank_confirm_delete.html
@@ -73,8 +73,8 @@
     </div>
 
     <div align="center">
-            <input type="submit" value="delete" class="btn btn-danger">
-            <a href="{% url 'tank-view' %}" class="btn btn-info" >cancel </a>
+            <input type="submit" value="Delete" class="btn btn-danger">
+            <a href="{% url 'tank-view' %}" class="btn btn-info" >Cancel </a>
         </div>
 
     </form>
