--- a/vehicle_master/templates/vehicle_master/vehicle_list.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_list.html
@@ -15,7 +15,7 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title" align="center"> Creditors Vehicle Table </h3>
+                <h3 align="center"> Creditors Vehicle Table </h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
